Add constants + add select fish functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>AquaVoxel</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="scene">
-    <script type="module" src="js/main.js"></script>
+<body>
+    <div class="edit-menu">
+        <button class="button"></button>
+        <button class="button"></button>
+        <button class="button"></button>
+    </div>
+    <div class="scene">
+        <script type="module" src="js/main.js"></script>
+    </div>
 </body>
 </html>
