--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaVoxel</title>
+
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="scene">
-    <script type="module" src="js/main.js"></script>
+<body>
+    <div class="scene">
+    </div>
 </body>
+<script type="module" src="js/main.js"></script>
 </html>
